# CryptIRC

./: Cargo.toml  INSTALL.md  README.md  adduser.sh  build.rs  resetpass.sh
deploy/: Caddyfile  README.md  cryptirc.service  deploy-arch.sh  deploy.sh  irc-core.service  update.sh
docs/: index.html  themes.js
electron/: main.js  package-lock.json  package.json  preload.js
scripts/: sync-version.sh  test-messages-inbox-loop.js
src/: ai.rs  auth.rs  bots.rs  captcha.rs  certs.rs  crypto.rs  e2e.rs  email.rs  ipc.rs  ipc_client.rs  ipc_framing.rs  ipc_server.rs  irc.rs  irc_daemon.rs  ircproto.rs  lastfm.rs  lib.rs  logs.rs  main.rs  notifications.rs  paste.rs  preview.rs  sysstatus.rs  upload.rs  version_sync.rs
static/: alien.js  app.js  crab.js  e2e.js  esheep.js  fish.js  ghost.js  index.html  manifest.json  sw.js
