[package]
name = "cryptirc"
version = "0.4.0"
edition = "2021"

[dependencies]
tokio = { version = "=1.38.0", features = ["full"] }
axum = { version = "=0.7.5", features = ["ws", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
subtle = "2"
zeroize = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures-util = "0.3"
dashmap = "5"
tokio-native-tls = "0.3"
native-tls = { version = "0.2", features = ["vendored"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "tokio1", "tokio1-native-tls"] }
rcgen = "0.12"
sha2 = "0.10"
openssl = { version = "0.10", features = ["v102", "v110"] }
openssl-sys = "0.9"
libc = "0.2"
tokio-openssl = "0.6"
web-push = { version = "0.9", default-features = false, features = ["hyper-client"] }
hkdf = "0.12"
p256 = { version = "0.13", features = ["ecdsa"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "gzip"] }
socket2 = { version = "0.5", features = ["all"] }

# ── Build profile — pinned deliberately for the never-restart irc_core daemon ──
# (applies to the web binary too; both are fine with these). Explicit so a future
# toolchain/Cargo default can't silently flip either policy under a frozen binary.
[profile.release]
# A panicking task must be ISOLATED, never abort the whole process — this is the
# foundation of per-connection fault isolation in the daemon.
panic = "unwind"
# Arithmetic must NEVER panic in prod (wraps instead); paired with saturating_add/mul
# on every unbounded counter so wrapping is never actually reached either.
overflow-checks = false
